# progressiveMauve-modernization

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
libGenome/: CMakeLists.txt
libGenome/libGenome/: IntervalSequenceTree.h  coordMapper.cpp  gnABISource.cpp  gnABISource.h  gnBaseFeature.cpp  gnBaseFeature.h  gnBaseSource.h  gnBaseSpec.h  gnCompare.cpp  gnCompare.h  gnContigSpec.cpp  gnContigSpec.h  gnDebug.h  gnDefs.cpp  gnDefs.h  gnExceptionCode.h  gnFASSource.cpp  gnFASSource.h  gnFastTranslator.h  gnFeature.cpp  gnFeature.h  gnFileContig.cpp  gnFileContig.h  gnFileSource.cpp  gnFileSource.h  gnFilter.cpp  gnFilter.h  gnFragmentSpec.cpp  gnFragmentSpec.h  gnGBKSource.cpp  gnGBKSource.h  gnGenomeSpec.cpp  gnGenomeSpec.h  gnLocation.cpp  gnLocation.h  gnMultiSpec.h  gnPosSpecificTranslator.cpp  gnRAWSource.cpp  gnRAWSource.h  gnSEQSource.cpp  (+12 more)
libMems/: CMakeLists.txt
libMems/libMems/: AbstractGappedAlignment.h  AbstractMatch.h  Aligner.cpp  Aligner.h  Backbone.cpp  Backbone.h  ClustalInterface.cpp  ClustalInterface.h  CompactGappedAlignment.h  DNAMemorySML.cpp  DNAMemorySML.h  DistanceMatrix.h  FileSML.cpp  FileSML.h  Files.h  GappedAligner.h  GappedAlignment.h  GreedyBreakpointElimination.cpp  GreedyBreakpointElimination.h  HybridAbstractMatch.h  Interval.h  IntervalList.h  Islands.cpp  Islands.h  MaskedMemHash.cpp  MaskedMemHash.h  Match.h  MatchFinder.cpp  MatchFinder.h  MatchHashEntry.cpp  MatchHashEntry.h  MatchList.h  Matrix.h  MemHash.cpp  MemHash.h  Memory.h  MemorySML.cpp  MemorySML.h  MuscleInterface.cpp  MuscleInterface.h  (+22 more)
libMems/libMems/HomologyHMM/: algebras.cpp  algebras.h  dptables.h  homology.cpp  homology.h  homologymain.cpp  parameters.h
libMems/libMems/dmSML/: aPOSIXaio.cpp  aPOSIXaio.h  alibc.cpp  alibc.h  alinuxaio.cpp  alinuxaio.h  asyncio.c  asyncio.cpp  asyncio.h  awin32aio.c  awin32aio.cpp  awin32aio.h  buffer.c  buffer.cpp  buffer.h  dmsort.c  dmsort.cpp  dmsort.h  sml.cpp  sml.h  sorting.cpp  sorting.h  timing.c  timing.cpp  timing.h  util.c  util.cpp  util.h
mauveAligner/: CMakeLists.txt
mauveAligner/src/: AlignmentTree.cpp  AlignmentTree.h  MatchRecord.h  RepeatHashCat.cpp  RepeatHashCat.h  SeedMatchEnumerator.h  UniqueMatchFinder.cpp  UniqueMatchFinder.h  addUnalignedIntervals.cpp  alignmentProjector.cpp  backbone_global_to_local.cpp  bbBreakOnGenes.cpp  getopt.cpp  getopt.h  mauveAligner.cpp  mauveAligner.h  multiToRawSequence.cpp  progressiveMauve.cpp  repeatoire.cpp  rootTrees.cpp  scoreALU.cpp  scoreProcrastAlignment.cpp  uniqueMerCount.cpp  win_getopt.cpp  win_getopt.h
muscle/: CMakeLists.txt
muscle/libMUSCLE/: aligngivenpath.cpp  aligngivenpathsw.cpp  alpha.cpp  anchoredpp.cpp  anchors.cpp  bittraceback.cpp  clust.cpp  cluster.cpp  clwwt.cpp  color.cpp  diffobjscore.cpp  difftrees.cpp  dpreglist.cpp  enumtostr.cpp  estring.cpp  fasta.cpp  fastdistjones.cpp  fastdistkmer.cpp  fastdistmafft.cpp  fastdistnuc.cpp  fastscorepath2.cpp  finddiags.cpp  finddiagsn.cpp  glbalignsimple.cpp  glbalignss.cpp  glbalndimer.cpp  globals.cpp  globalslinux.cpp  globalswin32.cpp  intmath.h  makerootmsa.cpp  msa.cpp  msa2.cpp  msadist.h  msf.cpp  muscle.h  nwdasimple.cpp  nwdasimple2.cpp  nwdasmall.cpp  nwsmall.cpp  (+33 more)
sgEvolver/: CMakeLists.txt
sgEvolver/src/: GisSplayTree.h  Mutator.cpp
test_data/: 2.fasta  CP08.fasta  jp.fasta
