set(MUSCLE_SRC
    libMUSCLE/aligngivenpath.cpp
    libMUSCLE/aligngivenpathsw.cpp
    libMUSCLE/aligntwomsas.cpp
    libMUSCLE/aligntwoprofs.cpp
    libMUSCLE/aln.cpp
    libMUSCLE/alpha.cpp
    libMUSCLE/anchoredpp.cpp
    libMUSCLE/anchors.cpp
    libMUSCLE/bittraceback.cpp
    libMUSCLE/blosum62.cpp
    libMUSCLE/blosumla.cpp
    libMUSCLE/clust.cpp
    libMUSCLE/cluster.cpp
    libMUSCLE/clwwt.cpp
    libMUSCLE/color.cpp
    libMUSCLE/cons.cpp
    libMUSCLE/diaglist.cpp
    libMUSCLE/diffobjscore.cpp
    libMUSCLE/diffpaths.cpp
    libMUSCLE/difftrees.cpp
    libMUSCLE/difftreese.cpp
    libMUSCLE/distcalc.cpp
    libMUSCLE/distfunc.cpp
    libMUSCLE/distpwkimura.cpp
    libMUSCLE/domuscle.cpp
    libMUSCLE/dosp.cpp
    libMUSCLE/dpreglist.cpp
    libMUSCLE/drawtree.cpp
    libMUSCLE/edgelist.cpp
    libMUSCLE/enumopts.cpp
    libMUSCLE/enumtostr.cpp
    libMUSCLE/estring.cpp
    libMUSCLE/fasta.cpp
    libMUSCLE/fasta2.cpp
    libMUSCLE/fastclust.cpp
    libMUSCLE/fastdist.cpp
    libMUSCLE/fastdistjones.cpp
    libMUSCLE/fastdistkbit.cpp
    libMUSCLE/fastdistkmer.cpp
    libMUSCLE/fastdistmafft.cpp
    libMUSCLE/fastdistnuc.cpp
    libMUSCLE/fastscorepath2.cpp
    libMUSCLE/finddiags.cpp
    libMUSCLE/finddiagsn.cpp
    libMUSCLE/glbalign.cpp
    libMUSCLE/glbalign352.cpp
    libMUSCLE/glbaligndiag.cpp
    libMUSCLE/glbalignle.cpp
    libMUSCLE/glbalignsimple.cpp
    libMUSCLE/glbalignsp.cpp
    libMUSCLE/glbalignspn.cpp
    libMUSCLE/glbalignss.cpp
    libMUSCLE/glbalndimer.cpp
    libMUSCLE/globals.cpp
    libMUSCLE/globalslinux.cpp
    libMUSCLE/globalsother.cpp
    libMUSCLE/globalswin32.cpp
    libMUSCLE/gonnet.cpp
    libMUSCLE/gotowt.cpp
    libMUSCLE/henikoffweight.cpp
    libMUSCLE/henikoffweightpb.cpp
    libMUSCLE/html.cpp
    libMUSCLE/hydro.cpp
    libMUSCLE/intmath.cpp
    libMUSCLE/local.cpp
    libMUSCLE/makerootmsa.cpp
    libMUSCLE/makerootmsab.cpp
    libMUSCLE/maketree.cpp
    libMUSCLE/mhack.cpp
    libMUSCLE/mpam200.cpp
    libMUSCLE/msa.cpp
    libMUSCLE/msa2.cpp
    libMUSCLE/msadistkimura.cpp
    libMUSCLE/msf.cpp
    libMUSCLE/muscle.cpp
    libMUSCLE/muscleout.cpp
    libMUSCLE/nucmx.cpp
    libMUSCLE/nwdasimple.cpp
    libMUSCLE/nwdasimple2.cpp
    libMUSCLE/nwdasmall.cpp
    libMUSCLE/nwrec.cpp
    libMUSCLE/nwsmall.cpp
    libMUSCLE/objscore.cpp
    libMUSCLE/objscore2.cpp
    libMUSCLE/objscoreda.cpp
    libMUSCLE/onexception.cpp
    libMUSCLE/options.cpp
    libMUSCLE/outweights.cpp
    libMUSCLE/pam200mafft.cpp
    libMUSCLE/params.cpp
    libMUSCLE/phy.cpp
    libMUSCLE/phy2.cpp
    libMUSCLE/phy3.cpp
    libMUSCLE/phy4.cpp
    libMUSCLE/phyfromclust.cpp
    libMUSCLE/phyfromfile.cpp
    libMUSCLE/physeq.cpp
    libMUSCLE/phytofile.cpp
    libMUSCLE/posgap.cpp
    libMUSCLE/ppscore.cpp
    libMUSCLE/profdb.cpp
    libMUSCLE/profile.cpp
    libMUSCLE/profilefrommsa.cpp
    libMUSCLE/progalign.cpp
    libMUSCLE/progress.cpp
    libMUSCLE/progressivealign.cpp
    libMUSCLE/pwpath.cpp
    libMUSCLE/readmx.cpp
    libMUSCLE/realigndiffs.cpp
    libMUSCLE/realigndiffse.cpp
    libMUSCLE/refine.cpp
    libMUSCLE/refinehoriz.cpp
    libMUSCLE/refinesubfams.cpp
    libMUSCLE/refinetree.cpp
    libMUSCLE/refinetreee.cpp
    libMUSCLE/refinevert.cpp
    libMUSCLE/refinew.cpp
    libMUSCLE/savebest.cpp
    libMUSCLE/scoredist.cpp
    libMUSCLE/scoregaps.cpp
    libMUSCLE/scorehistory.cpp
    libMUSCLE/scorepp.cpp
    libMUSCLE/seq.cpp
    libMUSCLE/seqvect.cpp
    libMUSCLE/setblosumweights.cpp
    libMUSCLE/setgscweights.cpp
    libMUSCLE/setnewhandler.cpp
    libMUSCLE/spfast.cpp
    libMUSCLE/stabilize.cpp
    libMUSCLE/subfam.cpp
    libMUSCLE/subfams.cpp
    libMUSCLE/sw.cpp
    libMUSCLE/termgaps.cpp
    libMUSCLE/textfile.cpp
    libMUSCLE/threewaywt.cpp
    libMUSCLE/tomhydro.cpp
    libMUSCLE/traceback.cpp
    libMUSCLE/tracebackopt.cpp
    libMUSCLE/tracebacksw.cpp
    libMUSCLE/treefrommsa.cpp
    libMUSCLE/typetostr.cpp
    libMUSCLE/upgma2.cpp
    libMUSCLE/usage.cpp
    libMUSCLE/validateids.cpp
    libMUSCLE/vtml2.cpp
    libMUSCLE/writescorefile.cpp
)

add_library(muscle STATIC ${MUSCLE_SRC})
target_include_directories(muscle PUBLIC
    ${PROJECT_SOURCE_DIR}/muscle
    ${PROJECT_SOURCE_DIR}/muscle/libMUSCLE
)
